[tool.poetry]
name = "bitbucketmock"
version = "0.1.0"
description = ""
authors = ["Yanay Goor <yanay.goor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.942"
pytest = "^7.1.1"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
